Added statics understanding, need to fix this to work with tools like curl or just the browser.